refactor: Update file imports to include .tsx and .ts extensions
This change updates import paths throughout the project to explicitly include file extensions (.tsx and .ts). This improves module resolution clarity and ensures compatibility with stricter module bundler configurations.

--- a/index.html
+++ b/index.html
@@ -46,5 +46,6 @@
 </head>
 <body class="antialiased overflow-hidden h-full">
     <div id="root" class="h-full"></div>
+    <script type="module" src="./index.tsx"></script>
 </body>
 </html>
